+ Fait le lien entre le choix de catégorie et Types

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PetitLingo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choix_fragment">Que veux-tu apprendre aujourd\'hui ?</string>
 </resources>
