--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">PetitLingo</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
     <string name="choix_fragment">Que veux-tu apprendre aujourd\'hui ?</string>
     <string name="hello_blank_fragment">Este es el nivel</string>
 </resources>
